# olist-pyspark-elt-demo

./: .gitignore  README.md  pyproject.toml
notebooks/: base_notebook.ipynb
notebooks/analytics/: duckdb_delta.ipynb
notebooks/bronze/: product_category_translation.ipynb  stg_brz_customer.ipynb  stg_brz_geolocation.ipynb  stg_brz_order_items.ipynb  stg_brz_order_payments.ipynb  stg_brz_order_reviews.ipynb  stg_brz_orders.ipynb  stg_brz_product_category_translation.ipynb  stg_brz_products.ipynb  stg_brz_sellers.ipynb
notebooks/gold/commercial/: slv_gld_fct_and_freight_volume.ipynb
notebooks/gold/dim/: slv_gld_dim_customer.ipynb  slv_gld_dim_geolocation.ipynb  slv_gld_dim_products.ipynb  slv_gld_dim_sellers.ipynb
notebooks/gold/fct/: slv_gld_fct_order_items.ipynb  slv_gld_fct_order_payments.ipynb  slv_gld_fct_order_reviews.ipynb  slv_gld_fct_orders.ipynb
notebooks/silver/: brz_slv_customer.ipynb  brz_slv_geolocation.ipynb  brz_slv_order_items.ipynb  brz_slv_order_payments.ipynb  brz_slv_order_reviews.ipynb  brz_slv_orders.ipynb  brz_slv_products.ipynb  brz_slv_sellers.ipynb
notebooks/silver/evt/: brz_slv_evt_order_items.ipynb  brz_slv_evt_order_payments.ipynb  brz_slv_evt_order_reviews.ipynb  brz_slv_evt_orders.ipynb
notebooks/silver/mtd/: brz_slv_mtd_customer.ipynb  brz_slv_mtd_geolocation.ipynb  brz_slv_mtd_products.ipynb  brz_slv_mtd_sellers.ipynb
src/utils/: orchestration.py
