[tool.poetry]
package-mode = false
name = "olist-pyspark-elt-demo"
version = "0.1.0"
description = ""
authors = ["Fabio Simoes <fabio.simoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
delta-spark = "^3.2.1"
duckdb = "^1.1.1"
deltalake = "^0.20.1"
papermill = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
